2008-11-05 Ingo Renner	<ingo3@typo3.org>

	* Updated contact email, year in copyright notices
	* Fixed bug #9168: 'character' is also a reserved name/word
	* Fixed bug #2357: "Max filesize allowed (kb)" cannot be changed
	* Fixed bug #6479: wrong field names for localization
	* Fixed bug #9240: Value of default_sortby is TCA ctrl section is wrapped with double quotes

2008-11-04 Peter Foerger	<p.foerger@vke-design.de>

	* IRRE integration skipped. Option has been simply commented out, for ease of use to those who want to try out IRRE at it's basics…

2008-05-28 Peter Foerger	<p.foerger@vke-design.de>

	* FIX fixed bug 1045: Upper Value for field endtime is the 31.12.2020. Thanks to Steffen Mueller

2008-05-28 Peter Foerger	<p.foerger@vke-design.de>

	* FIX fixed bug 3334: RTE "Typical Basic Setup" should default to richtext[]. Thanks to Ernesto Baschny

2008-05-27 Peter Foerger	<p.foerger@vke-design.de>

	* FIX fixed bug 5339: t3lib_mgm::addServices should be placed in ext_localconf instead of ext_tables, Thanks to Nathan

2008-05-27 Peter Foerger	<p.foerger@vke-design.de>

	* FIX fixed bug 6386: Added 'default' and 'column' to the list of reserved words

2008-05-27  Michael Stucki  <michael@typo3.org>

	* Add missing parameter while calling ->cleanFieldsAndDoCommands(), bug 6053

2008-05-27 Peter Foerger	<p.foerger@vke-design.de>

	* FIX fixed bug 6482: Creating wizard leads to a breaking wizard

2008-05-27 Peter Foerger	<p.foerger@vke-design.de>

	* FIX fixed bug 5433: Removed the no_cache parameter for USER_INT

2008-05-15 Peter Foerger	<p.foerger@vke-design.de>

	* FIX fixed bug 8408: Default value of excludeField changed to zero, thanks to Steffen Kamper

2008-05-13 Oliver Klee  <typo3-coding@oliverklee.de>

	* CHG 0008377: Remove trailing whitespace from all kickstarter files

2008-02-14 Dmitry Dulepov  <dmitry@typo3.org>

	* Changed blob columns to text
	* Commented CSS_editor code
	* Changes in formatting according to CGL